// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Member/components/PermissionFields render init snapshot 1`] = `
<body>
  <div>
    <form
      class="ant-form ant-form-horizontal"
    >
      <h1
        class="ant-typography member-form-sub-title css-1eepp70"
      >
        管理员设置
      </h1>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="isProjectAdmin"
              title="是否为项目管理员"
            >
              是否为项目管理员
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="false"
                  class="ant-switch basic-switch-wrapper css-g6dhbn"
                  id="isProjectAdmin"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <h1
            class="ant-typography member-form-sub-title css-1eepp70"
          >
            项目管理权限
          </h1>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-checkbox-group css-svmyig"
                      id="projectManagementPermission"
                    >
                      <label
                        class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value="700001"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                        <span>
                          创建项目
                        </span>
                      </label>
                      <label
                        class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value="20100"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                        <span>
                          创建项目
                        </span>
                      </label>
                      <label
                        class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value="20150"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                        <span>
                          修改项目
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h1
            class="ant-typography member-form-sub-title css-1eepp70"
          >
            项目操作权限
          </h1>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn ant-btn-default member-form-add-button basic-button-wrapper css-1719g3l"
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                            fill="#4583FF"
                          />
                        </svg>
                      </span>
                      <span>
                        添加项目操作权限
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`base/Member/components/PermissionFields render with isProjectAdmin is false 1`] = `
<body>
  <div>
    <form
      class="ant-form ant-form-horizontal"
    >
      <h1
        class="ant-typography member-form-sub-title css-1eepp70"
      >
        管理员设置
      </h1>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="isProjectAdmin"
              title="是否为项目管理员"
            >
              是否为项目管理员
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="false"
                  class="ant-switch basic-switch-wrapper css-g6dhbn"
                  id="isProjectAdmin"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-alert ant-alert-info"
        data-show="true"
        role="alert"
      >
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle ant-alert-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </span>
        <div
          class="ant-alert-content"
        >
          <div
            class="ant-alert-message"
          >
            项目管理员默认拥有项目下所有管理权限
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
